add incoming edges and agentstate to controllers